crates/ir/tests/snapshots/lower_test__data_types__shadow_prelude_type.snap
---
source: crates/ir/tests/lower_test.rs
expression: ir_module.to_string()
---
module data_types__shadow_prelude_type

type Ok = A#0 | B#1
import core/peek/peek as peek(h): h
import core/list/last as last(List[u3]): Option[u3]
import core/list/sort_by as sort_by(List[z5], (z5) -> o5): List[z5]
import core/list/filter as filter(List[j1], (j1) -> Bool): List[j1]
import core/list/fold as fold(List[w1], y1, (y1, w1) -> y1): y1
import core/list/map as map(List[y], (y) -> a1): List[a1]
import core/vec/to_list as to_list(Vec[c8]): List[c8]
import core/io/println as println(o): Unit
import core/option/Some as Some(e): Option[e]
import core/result/Ok as Ok(g): Result[f, g]
import core/result/Err as Err(f): Result[f, g]
import core/list/Cons as Cons(h, List[h]): List[h]
declare println: (o) -> Unit

fn main() -> Unit =
  let v0: ~Ok = construct Ok::A#0()
  let v1: ~Ok = v0
  switch v1 {
    0 ->
      let v2: Dict[core/show.Show, String] = get_dict core/show.Show[String]
      let v3: Unit = call println(v2, "A")
      v3
    1 ->
      let v4: Dict[core/show.Show, String] = get_dict core/show.Show[String]
      let v5: Unit = call println(v4, "B")
      v5
  }
